@@ -1,8 +1,8 @@
 package io.github.kongweiguang.test;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import io.github.kongweiguang.core.lang.Pair;
 import io.github.kongweiguang.core.lang.Maps;
+import io.github.kongweiguang.core.lang.Pair;
 import io.github.kongweiguang.db.DB;
 import io.github.kongweiguang.db.DbRun;
 import io.github.kongweiguang.db.page.Page;
@@ -14,10 +14,26 @@ import io.github.kongweiguang.test.domain.User;
 import org.junit.jupiter.api.Test;
 
 import java.util.*;
-import java.util.stream.Collectors;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class DBTest {
-    private static final DbRun run = DB.ofHikari("mysql");
+    //    private static final DbRun run = DB.ofHikari("mysql");
+    private static final DbRun run = null;
+
+    @Test
+    public void test16() throws Exception {
+
+        SqlRes res = Sql.select("u.id")
+                .from("users u")
+                .leftJoin("user_roles ur ").on("u.id = ur.user_id")
+                .where(WhereGroup.of(Where.likeEnd("username", "kong")),
+                        WhereGroup.and(Where.eq("email", "123@qq"), Where.ne("first_name", "zhang"))
+                )
+                .orderBy(Order.desc("created_at"))
+                .ok();
+        assertEquals("SELECT u.id FROM users u LEFT JOIN user_roles ur  ON u.id = ur.user_id WHERE (username LIKE '?%' ) AND (email =?  AND first_name !=? ) ORDER BY created_at DESC ", res.sql());
+    }
 
     @Test
     public void test15() throws Exception {
@@ -31,7 +47,8 @@ public class DBTest {
                         Where.eq("username", "li_si")
                 )
         );
-        System.out.println("p1 = " + p1);
+        assertEquals("AND (id =?  AND username =? ) OR (id =?  AND username =? )", p1.k());
+
         Pair<String, List<Object>> p2 = Wheres.buildGroup(
                 WhereGroup.of(
                         Where.eq("id", 23),
@@ -43,7 +60,7 @@ public class DBTest {
                         Where.eq("username", "li_si")
                 )
         );
-        System.out.println("p2 = " + p2);
+        assertEquals("(id =?  AND username =? ) OR (id =?  AND username =? )", p2.k());
 
         Pair<String, List<Object>> p3 = Wheres.buildGroup(
                 WhereGroup.not(
@@ -51,7 +68,8 @@ public class DBTest {
                         Where.eq("username", "wang_yi")
                 )
         );
-        System.out.println("p3 = " + p3);
+        assertEquals("NOT (id =?  AND username =? )", p3.k());
+
     }
 
     @Test
@@ -108,12 +126,11 @@ public class DBTest {
 
     @Test
     public void test13() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .deleteFrom("users")
                 .where("id = ?", 23)
                 .ok();
-
-        System.out.println(sr);
+        assertEquals("DELETE FROM users WHERE id = ? ", sr.sql());
 
         int execute = run.execute(sr.sql(), sr.params());
         System.out.println(execute);
@@ -122,13 +139,12 @@ public class DBTest {
 
     @Test
     public void test12() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .update("users")
                 .set("password =? ,email = ? ", "111111", "11111@163.com")
                 .where("id = ?", 23)
                 .ok();
-
-        System.out.println(sr);
+        assertEquals("UPDATE users SET password =? ,email = ?  WHERE id = ? ", sr.sql());
 
         int execute = run.execute(sr.sql(), sr.params());
         System.out.println(execute);
@@ -140,13 +156,13 @@ public class DBTest {
         list.add(new Object[]{23, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date()});
         list.add(new Object[]{21, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date()});
         list.add(new Object[]{22, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date()});
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .insert("users")
                 .into("id", "username", "password", "email", "first_name", "last_name", "created_at", "updated_at")
                 .value("?", "?", "?", "?", "?", "?", "?", "?")
                 .ok();
 
-        System.out.println(sr);
+        assertEquals("INSERT  INTO users  (id, username, password, email, first_name, last_name, created_at, updated_at) VALUES (?,?,?,?,?,?,?,?)", sr.sql());
 
         int[] execute = run.executeBatch(sr.sql(), list);
         System.out.println(Arrays.toString(execute));
@@ -157,13 +173,13 @@ public class DBTest {
         List<Object[]> list = new ArrayList<>();
         list.add(new Object[]{15, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date()});
         list.add(new Object[]{16, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date()});
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .insert("users")
                 .into("id", "username", "password", "email", "first_name", "last_name", "created_at", "updated_at")
                 .values(list)
                 .ok();
 
-        System.out.println(sr);
+        assertEquals("INSERT  INTO users  (id, username, password, email, first_name, last_name, created_at, updated_at) VALUES (?,?,?,?,?,?,?,?),(?,?,?,?,?,?,?,?)", sr.sql());
 
         int execute = run.execute(sr.sql(), sr.params());
         System.out.println(execute);
@@ -171,14 +187,13 @@ public class DBTest {
 
     @Test
     public void test9() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .insert("users")
                 .into("id", "username", "password", "email", "first_name", "last_name", "created_at", "updated_at")
                 .value(11, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date())
                 .value(12, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date())
                 .ok();
-
-        System.out.println(sr);
+        assertEquals("INSERT  INTO users  (id, username, password, email, first_name, last_name, created_at, updated_at) VALUES (?,?,?,?,?,?,?,?),(?,?,?,?,?,?,?,?)", sr.sql());
 
         int execute = run.execute(sr.sql(), sr.params());
         System.out.println(execute);
@@ -186,23 +201,21 @@ public class DBTest {
 
     @Test
     public void test8() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .insert("users")
                 .into("id", "username", "password", "email", "first_name", "last_name", "created_at", "updated_at")
                 .value(10, "zhang_san", "123456", "zhang_san@163.com", "zhang", "san", new Date(), new Date())
                 .ok();
-
-        System.out.println(sr);
+        assertEquals("INSERT  INTO users  (id, username, password, email, first_name, last_name, created_at, updated_at) VALUES (?,?,?,?,?,?,?,?)", sr.sql());
 
         int execute = run.execute(sr.sql(), sr.params());
         System.out.println(execute);
     }
 
-
     @Test
     public void test7() throws Exception {
         DbRun run1 = DB.ofHikari("pgsql");
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .select("*")
                 .from("users")
                 .ok();
@@ -213,97 +226,90 @@ public class DBTest {
 
     @Test
     public void test6() throws Exception {
-        SqlRes rs = Sql.of()
+        SqlRes rs = Sql
                 .select("*")
                 .from("users u")
                 .innerJoin("user_roles ur").on("u.id = ur.user_id and u.id = ?", 2)
                 .ok();
-        System.out.println("rs = " + rs);
+        assertEquals("SELECT * FROM users u INNER JOIN user_roles ur ON u.id = ur.user_id and u.id = ? ", rs.sql());
+
         List<Map<String, Object>> maps = run.selectList(rs.sql(), rs.params());
         System.out.println("maps = " + maps);
     }
 
     @Test
     public void test5() throws Exception {
-        SqlRes rs = Sql.of()
+        SqlRes rs = Sql
                 .select("*")
                 .from("users u")
                 .innerJoin("user_roles ur").on("u.id = ur.user_id")
                 .where("u.id = ?", 1)
                 .ok();
-        System.out.println("rs = " + rs);
+        assertEquals("SELECT * FROM users u INNER JOIN user_roles ur ON u.id = ur.user_id WHERE u.id = ? ", rs.sql());
+
         List<Map<String, Object>> maps = run.selectList(rs.sql(), rs.params());
         System.out.println("maps = " + maps);
     }
 
     @Test
     public void test4() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .select("*")
                 .from("users")
                 .ok();
-        //SELECT * FROM users
-        System.out.println("sr = " + sr);
+        assertEquals("SELECT * FROM users", sr.sql());
+
         long select = run.count(sr.sql(), sr.params());
-        //10
+
         System.out.println(select);
     }
 
     @Test
     void test3() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .select("*")
                 .from("users")
                 .ok();
-        //SELECT * FROM users
-        System.out.println("sr = " + sr);
+        assertEquals("SELECT * FROM users", sr.sql());
+
         PageRes<Map<String, Object>> pages = run.page(sr.sql(), Page.of(1, 1), sr.params());
 
-        //pages = PageRes[total=10, data=[{password=$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa, updated_at=2025-04-05T00:16:19, last_name=Doe, created_at=2025-04-05T00:16:19, id=1, first_name=John, email=john.doe@example.com, username=john_doe}]]
         System.out.println("pages = " + pages);
     }
 
     @Test
     void test2() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .select("*")
                 .from("users")
                 .ok();
-        //SELECT * FROM users
-        System.out.println("sr = " + sr);
+        assertEquals("SELECT * FROM users", sr.sql());
 
         List<Map<String, Object>> maps = run.selectList(sr.sql(), sr.params());
-
-        //maps = [{password=$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa, updated_at=2025-04-05T00:16:19, last_name=Doe, created_at=2025-04-05T00:16:19, id=1, first_name=John, email=john.doe@example.com, username=john_doe}, {password=$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa, updated_at=2025-04-05T00:16:19, last_name=Smith, created_at=2025-04-05T00:16:19, id=2, first_name=Jane, email=jane.smith@example.com, username=jane_smith}, {password=$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa, updated_at=2025-04-05T00:16:19, last_name=Wonder, created_at=2025-04-05T00:16:19, id=3, first_name=Alice, email=alice.wonder@example.com, username=alice_wonder}, {password=123456, updated_at=2025-04-05T14:41:35, last_name=san, created_at=2025-04-05T14:41:35, id=10, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}, {password=123456, updated_at=2025-04-05T14:55:18, last_name=san, created_at=2025-04-05T14:55:18, id=11, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}, {password=123456, updated_at=2025-04-05T14:55:18, last_name=san, created_at=2025-04-05T14:55:18, id=12, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}, {password=123456, updated_at=2025-04-05T14:56:24, last_name=san, created_at=2025-04-05T14:56:24, id=15, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}, {password=123456, updated_at=2025-04-05T14:56:24, last_name=san, created_at=2025-04-05T14:56:24, id=16, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}, {password=123456, updated_at=2025-04-05T15:09:04, last_name=san, created_at=2025-04-05T15:09:04, id=21, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}, {password=123456, updated_at=2025-04-05T15:09:04, last_name=san, created_at=2025-04-05T15:09:04, id=22, first_name=zhang, email=wangyunchao@163.com, username=zhang_san}]
-        System.out.println("maps = " + maps);
 
         List<User> collect = maps.stream()
                 .map(Maps::key2CamelCase)
                 .map(e -> Json.toObj(e, User.class))
-                .collect(Collectors.toList());
-        //collect = [User[id=1, username='john_doe', password='$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa', email='john.doe@example.com', firstName='John', lastName='Doe', createdAt=2025-04-05T00:16:19, updatedAt=2025-04-05T00:16:19, roles=null], User[id=2, username='jane_smith', password='$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa', email='jane.smith@example.com', firstName='Jane', lastName='Smith', createdAt=2025-04-05T00:16:19, updatedAt=2025-04-05T00:16:19, roles=null], User[id=3, username='alice_wonder', password='$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa', email='alice.wonder@example.com', firstName='Alice', lastName='Wonder', createdAt=2025-04-05T00:16:19, updatedAt=2025-04-05T00:16:19, roles=null], User[id=10, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T14:41:35, updatedAt=2025-04-05T14:41:35, roles=null], User[id=11, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T14:55:18, updatedAt=2025-04-05T14:55:18, roles=null], User[id=12, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T14:55:18, updatedAt=2025-04-05T14:55:18, roles=null], User[id=15, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T14:56:24, updatedAt=2025-04-05T14:56:24, roles=null], User[id=16, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T14:56:24, updatedAt=2025-04-05T14:56:24, roles=null], User[id=21, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T15:09:04, updatedAt=2025-04-05T15:09:04, roles=null], User[id=22, username='zhang_san', password='123456', email='wangyunchao@163.com', firstName='zhang', lastName='san', createdAt=2025-04-05T15:09:04, updatedAt=2025-04-05T15:09:04, roles=null]]
+                .toList();
+
         System.out.println("collect = " + collect);
     }
 
     @Test
     void test1() throws Exception {
-        SqlRes sr = Sql.of()
+        SqlRes sr = Sql
                 .select("*")
                 .from("users")
                 .where("id = ?", 1)
                 .orderBy(Order.desc("created_at"))
                 .ok();
-        //SELECT * FROM users WHERE id = ? ORDER BY created_at DESC
-        System.out.println("sr = " + sr);
+        assertEquals("SELECT * FROM users WHERE id = ? ORDER BY created_at DESC", sr.sql());
 
         Map<String, Object> select = run.select(sr.sql(), sr.params());
-        // {password=$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa, updated_at=2025-04-05T00:16:19, last_name=Doe, created_at=2025-04-05T00:16:19, id=1, first_name=John, email=john.doe@example.com, username=john_doe}
-        System.out.println(select);
 
-        User user = Json.toObj(Maps.key2CamelCase(select), new TypeReference<User>() {
+        User user = Json.toObj(Maps.key2CamelCase(select), new TypeReference<>() {
         });
 
-        //User[id=1, username='john_doe', password='$2a$10$EIXIX.USQKzdbTXDqyXneiHeRXkVkDxBdRpYxL1pJq2YFfjZq2mIpa', email='john.doe@example.com', firstName='John', lastName='Doe', createdAt=2025-04-05T00:16:19, updatedAt=2025-04-05T00:16:19, roles=null]
         System.out.println(user);
     }
 }
